@@ -1,5 +1,8 @@
 2017-09-10  larissa9839  <larissa9839@gmail.com>
 
+	* tryXpath/scripts/try_xpath_content.js:
+	Define genericListener.listeners.requestShowAllResults function.
+
 	* tryXpath/scripts/try_xpath_functions.js: 
 	Define createDetailTableHeader function.
 	Define appendDetailRows function.
